--- a/package.json
+++ b/package.json
@@ -6,21 +6,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "data:generate": "node scripts/generate-data.js",
+    "data:import": "node scripts/import-data.js",
+    "data:reset": "node -e \"const fs = require('fs'); try { fs.unlinkSync('data/patients.db'); } catch(e) {} try { fs.unlinkSync('data/patients.jsonl'); } catch(e) {}\" && npm run data:generate && npm run data:import"
   },
   "dependencies": {
+    "@faker-js/faker": "^10.1.0",
+    "better-sqlite3": "^12.4.1",
+    "next": "16.0.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "next": "16.0.0"
+    "react-dom": "19.2.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "16.0.0"
+    "eslint-config-next": "16.0.0",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
