--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "better-sqlite3": "^12.4.1",
     "next": "16.0.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
