--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:integration": "jest --testPathPatterns=__tests__",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:all": "jest && playwright test",
     "data:generate": "node scripts/generate-data.js",
     "data:import": "node scripts/import-data.js",
     "data:reset": "node -e \"const fs = require('fs'); try { fs.unlinkSync('data/patients.db'); } catch(e) {} try { fs.unlinkSync('data/patients.jsonl'); } catch(e) {}\" && npm run data:generate && npm run data:import"
@@ -23,6 +28,7 @@
     "yup": "^1.7.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.56.1",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
