chore(deps): add server-only package for RSC safety
Install server-only package to prevent accidental bundling of server-side
code into client bundles. This package throws a build error if server-only
modules are imported in client components, providing compile-time safety
for the React Server Components architecture.

This establishes the foundation for server/client separation and shows
intent to use RSC architecture for improved performance.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "server-only": "^0.0.1",
     "yup": "^1.7.1"
   },
   "devDependencies": {
