docs: add comprehensive documentation and e2e tests for Multi-Zone architecture
- Add DEPLOYMENT.md: Complete Vercel deployment guide with step-by-step instructions
  * Prerequisites and account setup
  * Forms zone deployment (Step 1)
  * Shell zone deployment (Step 2)
  * Custom domain configuration
  * Environment variable setup
  * Verification and troubleshooting

- Add MIGRATION_GUIDE.md: Step-by-step migration instructions
  * Architecture overview
  * File organization guide
  * Dependency setup
  * Code migration steps
  * Configuration updates
  * Testing and verification

- Add MULTIZONE_IMPLEMENTATION.md: Implementation summary
  * Root workspace configuration
  * Shared packages overview
  * Shell zone features
  * Forms zone features
  * Configuration details
  * Deployment readiness checklist

- Add README-MULTIZONE.md: Project overview and quick start
  * Architecture diagram
  * Key features
  * Quick start guide
  * Development workflow
  * Testing instructions
  * Deployment information

- Add apps/shell/e2e/: End-to-end tests for patient search workflow
  * Patient search workflow tests
  * Visual regression tests for search bar
  * Comprehensive test coverage for user interactions

- Add apps/shell/playwright.config.ts: Playwright configuration for e2e tests
  * Browser configuration
  * Test timeout settings
  * Screenshot and video capture options

- Remove app/c-form/: Clean up reference directory
  * All code has been migrated to apps/forms/
  * Backward compatibility redirect is in place
  * No longer needed as reference

- Update package.json: Improved root workspace configuration
  * Better description of the project
  * Comprehensive script organization
  * Clear separation of zone-specific commands

This commit completes the Multi-Zone architecture implementation with full documentation and testing infrastructure.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "start:forms": "pnpm --filter forms start",
     "lint": "pnpm --recursive lint",
     "test": "pnpm --recursive test",
+    "test:all": "pnpm --filter shell test && pnpm --filter forms test && pnpm --filter @virtual-table/database test && pnpm --filter @virtual-table/ui test && pnpm --filter @virtual-table/utils test",
     "test:coverage": "pnpm --recursive test:coverage",
     "test:e2e": "pnpm --filter shell test:e2e",
     "clean": "pnpm --recursive clean && rm -rf node_modules",
